--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,3 +17,31 @@ services:
       - hub
     environment:
       - HUB_HOST=hub
+  #  1st test set
+  saucedemo-module:
+    image: dockerselenium
+    depends_on:
+      - chrome
+      - firefox
+    environment:
+      - BROWSER=chrome
+      - HUB_HOST=hub
+      - MODULE=saucedemo_tests.xml
+    # store results in reports folder
+    volumes:
+      # store reports in /reports/saucedemo
+      - ./reports/saucedemo:/usr/share/selenium_docker/test-output
+  #  2nd test set
+  duck-search-module:
+    image: dockerselenium
+    depends_on:
+      - chrome
+      - firefox
+    environment:
+      - BROWSER=chrome
+      - HUB_HOST=hub
+      - MODULE=duck_search_tests.xml
+    #    store results in reports folder
+    volumes:
+      # store reports in /reports/ducksearch
+      - ./reports/ducksearch:/usr/share/selenium_docker/test-output
